terminado el cap2. Me falta el cap3

--- a/TP2/Informe/Cap2.ipynb
+++ b/TP2/Informe/Cap2.ipynb
@@ -84,7 +84,7 @@
       "\t\n",
       "\tbestEstimators=[]\n",
       "\tfor estimatorName in estimators:\n",
-      "\t\testimator, tuned_parameters = getSearch(estimatorName)\n",
+      "\t\testimator, tuned_parameters = getSearch(estimators[estimatorName])\n",
       "\t\t\n",
       "\t\tprint(\"\")\n",
       "\t\tprint (\"# Finding best parameters for %s:\" % estimatorName)\n",
@@ -97,9 +97,6 @@
       "\n",
       "\t\t    # Add the best estimator to the result\n",
       "\t\t    bestEstimators.append((clf.best_estimator_, clf.best_score_))\n",
-      "\n",
-      "\t\t    # save estimator\n",
-      "\t\t    saveGridSearchResults(clf, './estimators/%s' % featureSet)  \n",
       "\n",
       "\t\t    print(\"\\tBest parameters: %s\" % clf.best_estimator_)\n",
       "\t\t    print(\"\\tBest score (%s): %s\" % (scoreName, clf.best_score_))\t\n",
@@ -121,13 +118,55 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "La definicion de qu\u00e9 espacio de p\u00e1rametros utilizar para cada clasificador, definimos un mapeo entre el nombre del claficador y los parametros que se utilizaran. Esto se muestra a continuaci\u00f3n"
+      "La definicion de qu\u00e9 espacio de p\u00e1rametros utilizar para cada clasificador, definimos un mapeo entre el nombre del claficador y los parametros que se utilizaran. Esto se muestra a continuaci\u00f3n:"
      ]
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [],
+     "input": [
+      "estimators[\"SVC\"] = (\n",
+      "\t\t\t\t\t\t\tSVC(C=1), \n",
+      "\t\t\t\t\t\t     #[{'kernel': ['rbf'], 'gamma': [1e-3, 1e-4, 2], 'C': [1, 10, 100, 1000]},\n",
+      "\t                         #{'kernel': ['linear'], 'C': [0.0025, 1, 5, 100, 1000]}]\t\n",
+      "\t                         [{'kernel': ['rbf'], 'gamma': [1e-3], 'C': [1, 100]},\n",
+      "\t                         {'kernel': ['linear'], 'C': [1, 5]}]\t\n",
+      "\t                    )\n",
+      "\testimators[\"RandomForest\"] = (\n",
+      "\t\t\t\t\t\t\t\t   RandomForestClassifier(), \n",
+      "\t\t\t\t\t\t           [{'n_estimators': [5, 20, 100], 'max_features': ['auto', 5, 20, 100], 'max_depth': [10, 50, 100]}]\n",
+      "\t\t\t\t\t\t           #[{'n_estimators': [20], 'max_features': ['auto', 5, 20, 100, 200], 'max_depth': [10, 100, 300]}]\n",
+      "\t\t\t\t\t\t         )\n",
+      "\testimators[\"ExtraTrees\"] = (\n",
+      "\t\t\t\t\t\t\t\tExtraTreesClassifier(),\n",
+      "\t\t\t\t\t\t\t\t[{'n_estimators': [5, 20, 100],  'max_features':['auto', 1, 5, 10], 'max_depth': [None, 5, 10], 'min_samples_split':[1], 'random_state':[0]}]\n",
+      "\t\t\t\t\t\t\t)\n",
+      "\testimators[\"LogisticRegression\"] = (\n",
+      "\t\t\t\t\t\t\t\t   \t\t\tLogisticRegression(), \n",
+      "\t\t\t\t\t\t           \t\t\t[{'penalty': ['l2'], 'C': [0.001, 0.01, 0.005, 0.0005, 0.0001]}]\n",
+      "\t\t\t\t\t\t         \t\t)\n",
+      "\testimators[\"DecisionTree\"] = (\n",
+      "\t\t\t\t\t\t\t\t   tree.DecisionTreeClassifier(), \n",
+      "\t\t\t\t\t\t           [{'max_depth': [5, 10], 'max_leaf_nodes': [50, 100]}]\n",
+      "\t\t\t\t\t\t         )\n",
+      "\testimators[\"AdaBoost\"] = (\n",
+      "\t\t\t\t\t\t\t\tAdaBoostClassifier(), \n",
+      "\t\t\t\t\t\t        [{'n_estimators': [20, 50, 100], 'algorithm': ['SAMME.R']}]\n",
+      "\t\t\t\t\t\t     )\n",
+      "\testimators[\"GradientBoosting\"] = (\n",
+      "\t\t\t\t\t\t\t\tGradientBoostingClassifier(), \n",
+      "\t\t\t\t\t\t        [{'n_estimators': [20, 100, 150], 'learning_rate': [1.0, 0.1], 'max_depth':[3, 10], 'loss':['deviance']}]\n",
+      "\t\t\t\t\t\t     )\t\n",
+      "\testimators[\"GaussianNB\"] = (\n",
+      "\t\t\t\t\t\t\t\tGaussianNB(), \n",
+      "\t\t\t\t\t\t        [{}]\n",
+      "\t\t\t\t\t\t     )\n",
+      "\testimators[\"Bagging\"] = (\n",
+      "\t\t\t\t\t\t\t\tBaggingClassifier(),\n",
+      "\t\t\t\t\t\t\t\t[{'base_estimator': [KNeighborsClassifier(), tree.DecisionTreeClassifier()],\n",
+      "\t\t\t\t\t\t\t\t  'n_estimators': [5, 10], 'max_features':[0.5], 'max_samples':[0.5]}]\n",
+      "\t\t\t\t\t\t\t)"
+     ],
      "language": "python",
      "metadata": {},
      "outputs": []
@@ -137,23 +176,16 @@
      "metadata": {},
      "source": [
       "<h3>Ensambles utilizados</h3>\n",
-      "TBC"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<h3>Otros clasificadores</h3>\n",
-      "TBC"
-     ]
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": [
-      "<h3>Parametrizacion de cada clasificador</h3>\n",
-      "TBC"
+      "Como se puede observar, decidimos probar la performance de clasificaci\u00f3n utilizando 9 clasificadores. A su vez, 5 de estos clasificadores son ensambles:<br>\n",
+      "1- <b>[Bagging](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.BaggingClassifier.html#sklearn.ensemble.BaggingClassifier):</b> BaggingClassifier utiliza clasificadores base (en nuestro caso KNeighborsClassifier y DecisionTreeClassifier) y busca reducir la varianza de estos estimadores creando conjuntos aleatorios y agregando la prediccion individual <br>\n",
+      "2- <b>[GaussianNB](http://scikit-learn.org/stable/modules/gaussian_process.html): </b><br>\n",
+      "3- <b>[GradientBoosting](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html#sklearn.ensemble.GradientBoostingClassifier): </b><br>\n",
+      "4- <b>[AdaBoost](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostClassifier.html#sklearn.ensemble.AdaBoostClassifier): </b> <br>\n",
+      "5- <b>[DecisionTree](http://scikit-learn.org/stable/modules/tree.html#classification): </b><br>\n",
+      "6- <b>[LogisticRegression](http://scikit-learn.org/stable/modules/linear_model.html#logistic-regression: </b><br>\n",
+      "7- <b>[RandomForest](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier): </b>utiliza una t\u00e9cnica de perturbaci\u00f3n y combinaci\u00f3n introduciendo aleratoriedad en la construcci\u00f3n de  \u00e1rboles de decici\u00f3n  <br>\n",
+      "8- <b>[ExtraTrees](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.ExtraTreesClassifier.html#sklearn.ensemble.ExtraTreesClassifier): </b>Similarmente como RandomForest trabaja con \u00e1rboles de decici\u00f3n aleatorios, pero en este caso con mayor aleatoriedad. Respecto a RandomForest suele reducir la varianza pero aumentando el bias<br>\n",
+      "9- <b>[SVC](http://scikit-learn.org/stable/modules/svm.html): </b><br>"
      ]
     },
     {
@@ -161,8 +193,58 @@
      "metadata": {},
      "source": [
       "<h3>Resultados</h3>\n",
-      "Poner aca la tablita que hicimos en google\n",
-      "TBC"
+      "Para la ejecuci\u00f3n de esta b\u00fasqueda exhaustiva utilizamos un servidor con 24 procesadores. De esta forma pudimos sacar provecho de la opcion de paralelizaci\u00f3n que est\u00e1 implementada para gridsearch en sklearn (mediante el parametro n_jobs de GridSearchCV). A pesar de contar con un servidor potente y una gran cantidad de cores, la corrida para cada una de las features tarda alrededor de 4-5 horas.\n",
+      "Para realizar correctamente las pruebas, el metodo de gridsearch se ejecuta con el 20% de las imagenes totales. Esto es para una vez encontrados los mejores clasificadores, verificar si la precis\u00f3n esperada coincide al predecir ese 20% de imagenes restantes. Esto se realiza en el cap\u00edtuo siguente y utilizando el clasificador Voting.\n",
+      "\n",
+      "A continuaci\u00f3n se muestran los resultados obtenidos para los clasificadores no ensambles para todas las features. Se muestra la presici\u00f3n esperada (calculada con cross-validation) y la desviaci\u00f3n estandard de cada clasificador."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"files/img/tablaFeaturesVsNoEnsamble.png\" /><br>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Como se puede observar, los modelos que peor se comportan son DecisionTree y Gaussian, con valores de precision inferiores a 60%. Por otro lado, se puede ver que el set de features de histograma de colores (colorhist) se comporta mal con todos estos clasificadores. \n",
+      "\n",
+      "Por otro lado, se puede deducir de esta tabla que los features normalizados en general se comportan mejor que su contrapartida sin normalizar. Tambien sorprende la performance de los clasificadores LogisticRegression y SVM. En particular estos clasificadores utilizando el set de features de surf con clusters de 300 y normalizados, alcanza una presici\u00f3n mayor al 73%."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "A continuaci\u00f3n se muestra la misma tabla pero en este caso para los clasificadores ensambles. "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "<img src=\"files/img/tablaFeaturesVsEnsamble.png\" /><br>"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Aqui se puede observar tambi\u00e9n que las features de SURF generan una buena performance general con todos los clasificadores. En particular SURF con 300 clusters y normalizados parece ser el mejor set de features. En cuanto a las features de texturas, la mejor pareceria ser LBP, pero la performance es baja (cercana al 60%).\n",
+      "\n",
+      "Los clasificadores de ensable parecen tener en lineas generales una mejor performance. Sin embargo, el mejor clasificador sigue siendo LogisticRegression y SVM. Dentro de los clasificadores de ensambles el mejor es GradientBoosting pero con peque\u00f1as diferencias respecto a RandomForest y AdaBoost."
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Cabe notar que en estas tablas se muestra la precisi\u00f3n para el mejor set de par\u00e1metros de cada clasificador. En las pruebas realizadas de gridsearch, guardamos en disco tanto la precisi\u00f3n, los p\u00e1rametros y el clasificador ya entrenado. Esto se explica con mayor detalle en el siguiente cap\u00edtulo. Para mayor informaci\u00f3n se puede consultar la siguiente tabla, donde ademas de la presicion inclu\u00edmos los par\u00e1metros que generaron esa mejor precisi\u00f3n: [tabla de features vs clasificadores](https://docs.google.com/spreadsheets/d/1QUoA3orYAZi4s2TOtND3CdrLgHBIyWlrHAVUxew6LaY/edit#gid=797229090&vpid=A1)\n",
+      "\n",
+      "Por otro lado, se puede ver que algunas celdas no estan completas. Tambien por ejemplo falta correr las features de hara en los primeros clasificadores. Esto se debe a que cuando lanzamos todas las ejecuciones en el servidor no todas terminaron satisfactoriamente. Algunas ya fueron arregladas, y seguiremos realizando pruebas hasta el d\u00eda de la competencia con m\u00e1s clasificadores y probando con nuevos sets de par\u00e1metros. Los resultados los iremos actualizando en la tabla compartida de google mencionada anteriormente."
      ]
     },
     {
@@ -170,7 +252,9 @@
      "metadata": {},
      "source": [
       "<h3> Conclusi\u00f3n</h3>\n",
-      "TBC\n"
+      "En esta secci\u00f3n vimos el proceso que utilizamos para poner a prueba la gran cantidad de clasificadores y espacio de parametros de cada uno, para encontrar los mejores clasificadores y su precisi\u00f3n esperada. Vimos que los mejores clasificadores con el mejor set de features posee una presici\u00f3n superior al 75%.\n",
+      "En el siguiente capitulo veremos como puede utilizarse el clasificador de Voting, para mejorar aun mas la performance, utilizando no el mejor m\u00e9todo encontrado sino una conjuncion de loS mejoreS m\u00e9todoS. Tambi\u00e9n veremos como guardar los clasificadores una vez entrenados para ahorrar tiempo de procesamiento a la hora de la competencia.\n",
+      "\n"
      ]
     }
    ],
