--- a/TP2/Informe/Cap4.ipynb
+++ b/TP2/Informe/Cap4.ipynb
@@ -111,7 +111,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 9
     },
     {
      "cell_type": "markdown",
@@ -178,7 +179,28 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "SystemExit",
+       "evalue": "2",
+       "output_type": "pyerr",
+       "traceback": [
+        "An exception has occurred, use %tb to see the full traceback.\n",
+        "\u001b[1;31mSystemExit\u001b[0m\u001b[1;31m:\u001b[0m 2\n"
+       ]
+      },
+      {
+       "output_type": "stream",
+       "stream": "stderr",
+       "text": [
+        "usage: -c [-h] [-fc FEATURESCOLOR] [-fg FEATURESGRAY] [-fh FEATURESHARA]\n",
+        "          [-fl FEATURESLBP] [-fs FEATURESSURF] [--norm] [--pca]\n",
+        "-c: error: ambiguous option: -f could match -fc, -fg, -fh, -fl, -fs\n",
+        "To exit: use 'exit', 'quit', or Ctrl-D.\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -524,7 +546,7 @@
      "metadata": {},
      "source": [
       "<h3>Discusi\u00f3n</h3>\n",
-      "En este cap\u00edtulo se han presentado la soluci\u00f3n propuesta para la clasificaci\u00f3n de nuevas instancia a partir de la extracci\u00f3n de atributos basados en color y textura. Los mismos, luego fueron combinados en un \u00fanico vector de caracter\u00edsticas y se entren\u00f3 un ensamble con tres clasificadores diferentes que definen la clase final mediante un esquema de votaci\u00f3n. La mayor precisi\u00f3n alcanzada es del 75%, combinando todos los grupos de atributos. Como observaci\u00f3n interesante, se hall\u00f3 que los atributos SURF ofrecen la mejor performance permitiendo superar el 70% y mejorando levemente con el agregado de los dem\u00e1s atributos."
+      "En este cap\u00edtulo se han presentado la soluci\u00f3n propuesta para la clasificaci\u00f3n de nuevas instancia a partir de la extracci\u00f3n de atributos basados en color y textura. Los mismos, luego fueron combinados en un \u00fanico vector de caracter\u00edsticas y se entren\u00f3 un ensamble con tres clasificadores diferentes que definen la clase final mediante un esquema de votaci\u00f3n. "
      ]
     }
    ],
