--- a/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
+++ b/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
@@ -36,6 +36,8 @@
       "\n",
       "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2) Busqueda y Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros.\n",
       "\n",
+      "Es importante mencionar que para la lectura de este informe los bloques de c\u00f3digo no est\u00e1n intensionados para ser ejecutados dentro del inotebook. El c\u00f3digo inclu\u00eddo en los notebook son los extractos m\u00e1s importantes del c\u00f3digo que se adjunt\u00f3 junto con este informe, que puede ser executado directamente desde consola. La raz\u00f3n de esta decici\u00f3n es que el c\u00f3digo para el presente trabajo es bastante mas complejo que el anterior, y requerir\u00eda poner demasiado c\u00f3digo dentro del inotebook. Por otro lado, las funcionalidades mas importantes dependen de tener los archivos de imagenes, archivos de features pre-calculados y de los archivos de clasificadores pre-entrenados, pero todos estos archivos son demasiado pesados para estar inclu\u00eddos en el TP.\n",
+      "\n",
       "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 74%."
      ]
     },
