Intro y 2 vistos y ok

--- a/TP2/Informe/Cap2.ipynb
+++ b/TP2/Informe/Cap2.ipynb
@@ -11,20 +11,20 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "<center><h1>Cap\u00edtulo 2: Busqueda y Testing de clasificadores</h1></center>\n",
+      "<center><h1>Cap\u00edtulo 2: B\u00fasqueda y Testing de Clasificadores</h1></center>\n",
       "\n",
       "<h3>Introducci\u00f3n</h3>\n",
-      "Existen en la actualidad una gran cantidad m\u00e9todos de aprendizaje autom\u00e1tico que permiten entrenar un algoritmo con instancias de un modelo, de forma que posteriormente este modelo pueda clasificar nuevas instancias. S\u00f3lo tener una idea de cantidad de m\u00e9todos existentes, podemos mencionar algunos de los m\u00e9todos estudiados en la materia: \u00c1rboles de decici\u00f3n, K vecinos mas cercanos, Naive Bayes, SVM, Modelos de regresion, etc. Adicionalmente existen m\u00e9todos que realizan ensambles de otros m\u00e9todos, por ejemplo: Bagging, RandomForest, Boosting, etc. Sklearn trae implementado entre 20-40 m\u00e9todos de clasificaci\u00f3n. Ninguno de estos m\u00e9todos funciona bien para cualquier problema, y la performance va a depender de las caracteristicas particulares del modelo que se quiere explicar. La siguiente figura muestra diferentes metodos de clasificacion para diferentes instancias, donde se puede ver como las clasifica cada uno:\n",
-      "\n",
+      "Existen en la actualidad una gran cantidad m\u00e9todos de aprendizaje autom\u00e1tico que permiten entrenar un algoritmo con instancias de un modelo, de forma que posteriormente \u00e9ste pueda clasificar nuevas instancias. S\u00f3lo tener una idea de cantidad de m\u00e9todos existentes, podemos mencionar algunos de los estudiados en la materia: \u00c1rboles de decici\u00f3n, K vecinos mas cercanos, Naive Bayes, SVM, Modelos de regresion, etc. Adicionalmente existen m\u00e9todos que realizan ensambles de otros m\u00e9todos, por ejemplo: Bagging, RandomForest, Boosting, etc. SKlearn ofrece implementado entre 20-40 m\u00e9todos de clasificaci\u00f3n. Ninguno de estos m\u00e9todos funciona bien para cualquier problema, y la performance va a depender de las caracteristicas particulares del modelo que se quiere explicar. La siguiente figura muestra diferentes metodos de clasificacion para diferentes instancias, donde se puede ver como las clasifica cada uno:\n",
+      "<center>\n",
       "<img src=\"files/img/ClasificacionMetodos.png\" /><br>\n",
+      "Fuente: http://scikit-learn.org/stable/auto_examples/classification\n",
+      "</center>\n",
+      "Entonces, \u00bfC\u00f3mo saber cu\u00e1l de todos estos clasificadores se comportar\u00e1 mejor para nuestro problema? \n",
+      "Incluso en el \u00fatopico caso de conocer cual es el mejor m\u00e9todo de clasificacion para este problema, todos los modelos mencionados anteriormente deben instanciarse con diferentes par\u00e1metros. Estos par\u00e1metros pueden tomar valores discretos o continuos, por lo tanto tampoco sabr\u00edamos cu\u00e1l es el conjunto de valores que produce el mejor clasificador.\n",
       "\n",
-      "Entonces, \u00bfcomo saber cu\u00e1l de todos estos clasificadores se comportar\u00e1 mejor para nuestro problema? \n",
-      "Incluso en el \u00fatopico caso de conocer cual es el mejor m\u00e9todo de clasificacion para este problema, todos los modelos mencionados anteriormente deben instanciarse con diferentes parametros. Estos par\u00e1metros pueden tomar valores discretos o continuos, por lo tanto tampoco sabr\u00edamos cu\u00e1l es el conjunto de valores que produce el mejor clasificador.\n",
+      "En este cap\u00edtulo mostraremos la implementaci\u00f3n de una b\u00fasqueda exahustiva en el espacio de posibles clasificadores y sus par\u00e1metros conocido como GridSearch, que describiremos en detalle en la siguiente secci\u00f3n. En esta b\u00fasqueda se realiza N validaciones cruzadas (cross-validation) para cada posibilidad y se selecciona la que maximice alguna m\u00e9trica de performance (precision o \u00e1rea bajo la curva ROC, por ejemplo). Cabe destacar que no es posible que esta b\u00fasqueda cubra el espacio completo de posibilidades, y simplemente se limita a probar con un subconjunto grande de variantes. \n",
       "\n",
-      "En este cap\u00edtulo mostraremos la implementacion de una b\u00fasqueda exahusiva en el espacio de posibles clasificadores y sus par\u00e1metros conocido como GridSearch, que describiremos en detalle en la siguiente secci\u00f3n. En esta b\u00fasqueda se realiza N validaciones cruzadas (cross-validation) para cada posibilidad y se selecci\u00f3na la que maximice alguna metrica de performance (presi\u00f3n o curva ROS por ejemplo). Cabe destacar que no es posible que esta b\u00fasqueda cubra el espacio completo de posibilidades, y simplemente se limita a probar con un subconjunto grande de posibilidades. \n",
-      "\n",
-      "En el cap\u00edtulo anterior se presentaron varios m\u00e9todos para la extracci\u00f3n de atributos de las imagenes. Cada uno de estos m\u00e9todos de extrae una lista de atributos de cada imagen, que se utilizar\u00e1n en este cap\u00edtulo c\u00f3mo los atributos para entrenar y realizar la clasificacion (como se muestra en la figura 1 de la introducci\u00f3n). Esto a su vez agrega una nueva dimensi\u00f3n en el espacio de b\u00fasqueda: cada m\u00e9todo de extracci\u00f3n genera una lista de atributos diferente, \u00bfCu\u00e1l es el mejor set de features?\n",
-      "Por lo tanto, para cada una de las posibles features, correremos la b\u00fasqueda exhaustiva de GridSeach con todos los clasificadores ... muchas muchas pruebas!"
+      "En el cap\u00edtulo anterior se presentaron varios m\u00e9todos para la extracci\u00f3n de atributos de las im\u00e1genes. Cada uno de estos m\u00e9todos extrae una lista de atributos de cada imagen, que se utilizar\u00e1n en este cap\u00edtulo c\u00f3mo los atributos para entrenar y realizar la clasificaci\u00f3n (como se muestra en la Figura 1 de la Introducci\u00f3n). Esto a su vez agrega una nueva dimensi\u00f3n en el espacio de b\u00fasqueda: cada m\u00e9todo de extracci\u00f3n genera una lista de atributos diferente, \u00bfCu\u00e1l es el mejor set de \"features\"? Por lo tanto, para cada una de los posibles atributos, correremos la b\u00fasqueda exhaustiva de GridSeach con todos los clasificadores en varias pruebas... muchas, muchas pruebas!"
      ]
     },
     {
@@ -32,7 +32,7 @@
      "metadata": {},
      "source": [
       "<h3>B\u00fasqueda Exhaustiva GridSearch</h3>\n",
-      "Sklearn implementa una b\u00fasqueda exhaustiva en la clase [GridSearchCV](http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.GridSearchCV.html#sklearn.grid_search.GridSearchCV), que considera todas las combinaciones de los par\u00e1metros especificados para un determinado clasificador. Para cada una de estas combinaciones, GridSearch genera el estimador con los parametros, y luego realiza el t\u00edpico proceso de cross-validation para evaluar su performance: divide las instancias en train y test (cross_validation.train_test_split), entrena el clasificador con las instancias de train (fit) y realiza cross_val_score. A su vez cross_val_score utiliza una cantidad de fold, que para nuestro trabajo fijamos en 5. Tambi\u00e9n hay que seleccionar cual es la metrica que se desea maximizar en esta b\u00fasqueda, que para nuestro trabajo fijamos.\n",
+      "Sklearn implementa una b\u00fasqueda exhaustiva en la clase [GridSearchCV](http://scikit-learn.org/stable/modules/generated/sklearn.grid_search.GridSearchCV.html#sklearn.grid_search.GridSearchCV), que considera todas las combinaciones de los par\u00e1metros especificados para un determinado clasificador. Para cada una de estas combinaciones, GridSearch genera el estimador con los par\u00e1metros, y luego realiza el t\u00edpico proceso de cross-validation para evaluar su performance: divide las instancias en train y test (cross_validation.train_test_split), entrena el clasificador con las instancias de train (fit) y realiza cross_val_score. A su vez cross_val_score utiliza una cantidad de \"folds\", que para nuestro trabajo fijamos en 5. Tambi\u00e9n hay que seleccionar cual es la m\u00e9trica que se desea maximizar en esta b\u00fasqueda, que para nuestro trabajo fijamos en \"Precision\".\n",
       "\n",
       "Entonces para definir correctamente una b\u00fasqueda exhaustiva en necesario especificar: <br>\n",
       "1. Un estimador. (Ej: RandomForest, SVC, etc)<br>\n",
@@ -58,7 +58,7 @@
       "parameters = {'n_estimators': [5, 20, 100], 'max_features': ['auto', 5, 20, 100], 'max_depth': [10, 50, 100]}\n",
       "estimator = RandomForestClassifier()\n",
       "cv = 5\n",
-      "score = 'presicion'\n",
+      "score = 'precision'\n",
       "clf = GridSearchCV(estimator, parameters, cv=cv, \n",
       "\t\t                       scoring=score)\n"
      ],
@@ -118,7 +118,7 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "La definicion de qu\u00e9 espacio de p\u00e1rametros utilizar para cada clasificador, definimos un mapeo entre el nombre del claficador y los parametros que se utilizaran. Esto se muestra a continuaci\u00f3n:"
+      "La definici\u00f3n de qu\u00e9 espacio de p\u00e1rametros utilizar para cada clasificador, definimos un mapeo entre el nombre del claficador y los par\u00e1metros que se utilizar\u00e1n. Esto se muestra a continuaci\u00f3n:"
      ]
     },
     {
@@ -178,14 +178,14 @@
       "<h3>Ensambles utilizados</h3>\n",
       "Como se puede observar, decidimos probar la performance de clasificaci\u00f3n utilizando 9 clasificadores. A su vez, 5 de estos clasificadores son ensambles:<br>\n",
       "1- <b>[Bagging](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.BaggingClassifier.html#sklearn.ensemble.BaggingClassifier):</b> BaggingClassifier utiliza clasificadores base (en nuestro caso KNeighborsClassifier y DecisionTreeClassifier) y busca reducir la varianza de estos estimadores creando conjuntos aleatorios y agregando la prediccion individual <br>\n",
-      "2- <b>[GaussianNB](http://scikit-learn.org/stable/modules/gaussian_process.html): </b><br>\n",
-      "3- <b>[GradientBoosting](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html#sklearn.ensemble.GradientBoostingClassifier): </b><br>\n",
-      "4- <b>[AdaBoost](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostClassifier.html#sklearn.ensemble.AdaBoostClassifier): </b> <br>\n",
-      "5- <b>[DecisionTree](http://scikit-learn.org/stable/modules/tree.html#classification): </b><br>\n",
+      "2- <b>[GaussianNB](http://scikit-learn.org/stable/modules/gaussian_process.html): </b> Corresponde a un clasificador Bayesiano del que no se esperaba a priori alta performance, pero se teste\u00f3 de todos modos.<br>\n",
+      "3- <b>[DecisionTree](http://scikit-learn.org/stable/modules/tree.html#classification):</b> Implementaci\u00f3n de \u00c1rboles de Decisi\u00f3n<br>\n",
+      "4- <b>[GradientBoosting](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.GradientBoostingClassifier.html#sklearn.ensemble.GradientBoostingClassifier): </b>Es un m\u00e9todo de ensamble de clasificadores \"d\u00e9biles\" (weak), en general, \u00c1rboles de Decisi\u00f3n<br>\n",
+      "5- <b>[AdaBoost](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.AdaBoostClassifier.html#sklearn.ensemble.AdaBoostClassifier): </b>Un cl\u00e1sico algoritmo de boosting, similar al anterior pero que utiliza una funci\u00f3n de p\u00e9rdida diferente. <br>\n",
       "6- <b>[LogisticRegression](http://scikit-learn.org/stable/modules/linear_model.html#logistic-regression: </b><br>\n",
       "7- <b>[RandomForest](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.RandomForestClassifier.html#sklearn.ensemble.RandomForestClassifier): </b>utiliza una t\u00e9cnica de perturbaci\u00f3n y combinaci\u00f3n introduciendo aleratoriedad en la construcci\u00f3n de  \u00e1rboles de decici\u00f3n  <br>\n",
       "8- <b>[ExtraTrees](http://scikit-learn.org/stable/modules/generated/sklearn.ensemble.ExtraTreesClassifier.html#sklearn.ensemble.ExtraTreesClassifier): </b>Similarmente como RandomForest trabaja con \u00e1rboles de decici\u00f3n aleatorios, pero en este caso con mayor aleatoriedad. Respecto a RandomForest suele reducir la varianza pero aumentando el bias<br>\n",
-      "9- <b>[SVC](http://scikit-learn.org/stable/modules/svm.html): </b><br>"
+      "9- <b>[SVC](http://scikit-learn.org/stable/modules/svm.html): </b>Implementaci\u00f3n de Support Vector Machines<br>"
      ]
     },
     {
