--- a/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
+++ b/TP2/Informe/Trabajo Practico 2 - aa2015.ipynb
@@ -32,11 +32,11 @@
       "En este trabajo se toma el problema de distinguir im\u00e1genes de perros y gatos, una tarea propuesta en una competencia que desaf\u00eda el \n",
       "Asirra CAPTCHA (reconocer los perros y gatos en 12 im\u00e1genes), propuesto en la Conferencia de ACM CCS (Computer and Communications Security) 2007 (adem\u00e1s forma parte de los problemas presentados en Kaggle: https://www.kaggle.com/c/dogs-vs-cats). Si bien esta tarea es muy sencilla para un humano, la seguridad del Asirra CAPTCHA se basa en la dificultad de hacerlo de forma autom\u00e1tica.\n",
       "\n",
-      "En este trabajo se aborda el problema de construir un clasificador de im\u00e1genes que debe ser entrenado con un conjunto de instancias de las cuales se deben seleccionar atributos adecuados. Luego, a partir de diferentes estrategias de clasificaci\u00f3n, se construye en ensamble que permite mejorar la calidad de la predicci\u00f3n.\n",
+      "Entonces, se aborda el problema de construir un clasificador de im\u00e1genes que debe ser entrenado con un conjunto de instancias de las cuales se deben seleccionar atributos adecuados. Luego, a partir de diferentes estrategias de clasificaci\u00f3n, se construye en ensamble que permite mejorar la calidad de la predicci\u00f3n.\n",
       "\n",
       "Para ello, se extraen dos grupos de atributos (basados en color y en textura) y se someten a pruebas con diferentes algoritmos de clasificacion con un exhaustivo barrido por el espacio de par\u00e1metros. El trabajo se organiza de la siguiente manera: en la siguiente secci\u00f3n se describe la arquitectura general de la soluci\u00f3n. A continuaci\u00f3n, se dedican 4 cap\u00edtulos a presentar detalladamente los siguientes aspectos: 1) Extraccion de atributos, 2) Busqueda y Testing de clasificadores, 3) Elecci\u00f3n por voto y persistencia de modelos, 4) Clasificacion de nuevas instancias. Finalmente, se enuncian conclusiones y posibles trabajos futuros.\n",
       "\n",
-      "Es importante mencionar que para la lectura de este informe los bloques de c\u00f3digo no est\u00e1n intensionados para ser ejecutados dentro del inotebook. El c\u00f3digo inclu\u00eddo en los notebook son los extractos m\u00e1s importantes del c\u00f3digo que se adjunt\u00f3 junto con este informe, que puede ser executado directamente desde consola. La raz\u00f3n de esta decici\u00f3n es que el c\u00f3digo para el presente trabajo es bastante mas complejo que el anterior, y requerir\u00eda poner demasiado c\u00f3digo dentro del inotebook. Por otro lado, las funcionalidades mas importantes dependen de tener los archivos de imagenes, archivos de features pre-calculados y de los archivos de clasificadores pre-entrenados, pero todos estos archivos son demasiado pesados para estar inclu\u00eddos en el TP.\n",
+      "Es importante mencionar que para la lectura de este informe los bloques de c\u00f3digo no est\u00e1n intensionados para ser ejecutados dentro del INotebook. El c\u00f3digo inclu\u00eddo en los notebook son los extractos m\u00e1s importantes del c\u00f3digo que se adjunt\u00f3 junto con este informe, que puede ser executado directamente desde consola. La raz\u00f3n de esta decici\u00f3n es que el c\u00f3digo para el presente trabajo es bastante mas complejo que el anterior, y requerir\u00eda poner demasiado c\u00f3digo dentro del INotebook. Por otro lado, las funcionalidades mas importantes dependen de tener los archivos de imagenes, archivos de features pre-calculados y de los archivos de clasificadores pre-entrenados, pero todos estos archivos son demasiado \"pesados\" para estar inclu\u00eddos en este documento.\n",
       "\n",
       "Como se muestra en el cap\u00edtulo final, las pruebas con cross-validation utilizando el mejor clasificador encontrado nos da una presici\u00f3n cercana al 74%."
      ]
@@ -98,7 +98,12 @@
      "metadata": {},
      "source": [
       "## Conclusiones\n",
-      "TBC\n"
+      "\n",
+      "En este trabajo se abord\u00f3 el problema de la construcci\u00f3n de una herramienta de clasificaci\u00f3n autom\u00e1tica de perros y gatos bajo un enfoque de aprendizaj supervisado. Si bien la tarea es muy sensilla para un humano, su automatizaci\u00f3n plantea diversos problemas interesantes, al punto de ser un desafio en una competencia abierta.\n",
+      "\n",
+      "En cuanto a la selecci\u00f3n de los atributos, se trabaj\u00f3 principalmente con dos grupos: colores y texturas, generando cinco conjuntos de caracter\u00edsticas. Luego, se los combinaron para intentar mejorar la clasificaci\u00f3n. No obstante, los atributos que caracterizan texturas brindaron mejor performance en general. Por el lado de los clasificadores se constru\u00f3 un ensamble de tres clasificadores que definen la clase mediante un esquema de voto. Para su selecci\u00f3n, se tomaron nueve algoritmos y se realiz\u00f3 una b\u00fasqueda exhaustiva de los mejores par\u00e1metros. Se decidi\u00f3 dejar fuera los algoritmos basados en SVM (aunque se reconoce su performance) debido a los altos tiempos de entrenamiento con la cantidad de instancias (de aqu\u00ed surgen algunos trabajos futuros). A su vez, se intent\u00f3 mejorar la clasificaci\u00f3n con combinaciones de atributos y clasificadores.\n",
+      "\n",
+      "El resultado final muestra que se lleg\u00f3 a obtener una performance del 75% (evaluando con cross-validation) que ser\u00e1 nuestro baseline para la competencia propuesta por el equipo docente."
      ]
     },
     {
@@ -106,8 +111,12 @@
      "metadata": {},
      "source": [
       "## Ideas para Trabajos Futuros\n",
-      "TBC\n",
-      "\n"
+      "\n",
+      "En cuanto a los trabajos futuros, surgen dos l\u00edneas claras de trabajo: obtener mejores atributos y obtener mejores algoritmos y/o configuraciones para los clasificadores. \n",
+      "\n",
+      "En el primero de los casos, existen algunas t\u00e9cnicas de tratamiento digital de im\u00e1genes que son sugeridas pero que requieren conocer con cierta profundidad el \u00e1rea. Por ejemplo, la eliminaci\u00f3n del fondo para poder trabajar con la imagen principal y el reconocimiento de bordes (de forma complementaria) permtir\u00eda calcular atributos sobre la porci\u00f3n de inter\u00e9s solamente (por ejemplo, los LBP). Esta idea de determinar los objetos en la imagen (los perros o gatos en este caso) es una desafio debido a las variantes en apariencia, plano e iluminaci\u00f3n. Otra aproximaci\u00f3n a la extracci\u00f3n de atributos es utilizar los filtros HOG (Histogram of Oriented Gradients), una t\u00e9cnica relativamente reciente (2010) que ha mostrado ser de utilidad.\n",
+      "\n",
+      "Por el lado de mejorar los algoritmos y de acuerdo a las tendencias en la literatura, es natural evolucionar hacia SVM o Deep Learning. En el caso de SVM, hallar una implementaci\u00f3n mas eficiente que la utilizada permitir\u00eda acortar los tiempos de entrenamiento y ampliar el abanico de pruebas. Tal vez, una selecci\u00f3n previa de cu\u00e1les im\u00e1genes son mejores para entrenar permite recortar el n\u00famero de instancias (por ejemplo, realizando un clustering previo y dejando solo algunas de cada cluster)."
      ]
     },
     {
